Cherry-pick 49f5188b5e82. rdar://113328110

[CSS Fonts] The `from-font` value for CSS `font-size-adjust` is not computed correctly
    https://bugs.webkit.org/show_bug.cgi?id=259551

    Reviewed by Myles C. Maxfield.

    When resolving styles, we used the parent-style font to compute the aspect ratio
    for font-size-adjust: from-font because the first available font could not be
    determined at that moment. Unfortunately, this causes the failure of
    font-size-adjust-014.html. To make the test happy, we should defer resolving
    the aspect value after determining a primary font. Also, FontDescriptionKey
    should consider if the font-size-adjust has from-font, not simply checking if
    it has a valid value when looking up a proper FontCascadeFonts.

    * LayoutTests/TestExpectations:
    * Source/WebCore/css/ComputedStyleExtractor.cpp:
    (WebCore::fontSizeAdjustFromStyle):
    * Source/WebCore/platform/graphics/FontCascadeCache.h:
    (WebCore::FontDescriptionKey::FontDescriptionKey):
    * Source/WebCore/platform/graphics/FontCascadeFonts.cpp:
    (WebCore::FontCascadeFonts::glyphDataForCharacter):
    * Source/WebCore/platform/graphics/FontSizeAdjust.h:
    (WebCore::FontSizeAdjust::operator bool const):
    (WebCore::FontSizeAdjust::resolve const):
    (WebCore::add):
    (WebCore::operator<<):
    * Source/WebCore/style/StyleBuilderConverter.h:
    (WebCore::Style::BuilderConverter::convertFontSizeAdjust):
    * Source/WebCore/style/StyleFontSizeFunctions.cpp:
    (WebCore::Style::aspectValueOfPrimaryFont): Deleted.
    * Source/WebCore/style/StyleFontSizeFunctions.h:

    Canonical link: https://commits.webkit.org/268550@main

Canonical link: https://commits.webkit.org/267815.284@safari-7617-branch