Source/WebCore/style/StyleBuilderConverter.h
@@ -67,7 +67,6 @@
 #include "ScrollbarGutter.h"
 #include "Settings.h"
 #include "StyleBuilderState.h"
-#include "StyleFontSizeFunctions.h"
 #include "StyleReflection.h"
 #include "StyleScrollSnapPoints.h"
 #include "StyleTextBoxEdge.h"
@@ -1609,7 +1608,7 @@ inline FontVariationSettings BuilderConverter::convertFontVariationSettings(Buil
     return settings;
 }
 
-inline FontSizeAdjust BuilderConverter::convertFontSizeAdjust(BuilderState& builderState, const CSSValue& value)
+inline FontSizeAdjust BuilderConverter::convertFontSizeAdjust(BuilderState&, const CSSValue& value)
 {
     if (is<CSSPrimitiveValue>(value)) {
         auto& primitiveValue = downcast<CSSPrimitiveValue>(value);
@@ -1622,9 +1621,9 @@ inline FontSizeAdjust BuilderConverter::convertFontSizeAdjust(BuilderState& buil
             return { defaultMetric, false, primitiveValue.floatValue() };
 
         ASSERT(primitiveValue.valueID() == CSSValueFromFont);
-        // The primary font could be null in the current builder state where
-        // a fallback font is used. So, we use the parent style instead.
-        return { defaultMetric, true, aspectValueOfPrimaryFont(builderState.parentStyle(), defaultMetric) };
+        // As we cannot determine the primary font here, we defer resolving the
+        // aspect value for from-font to FontCascadeFonts::glyphDataForCharacter.
+        return { defaultMetric, true, std::nullopt };
     }
 
     ASSERT(value.isPair());
@@ -1636,7 +1635,7 @@ inline FontSizeAdjust BuilderConverter::convertFontSizeAdjust(BuilderState& buil
         return { metric, false, primitiveValue.floatValue() };
 
     ASSERT(primitiveValue.valueID() == CSSValueFromFont);
-    return { metric, true, aspectValueOfPrimaryFont(builderState.parentStyle(), metric) };
+    return { metric, true, std::nullopt };
 }
 
 #if PLATFORM(IOS_FAMILY)
